--- a/Login/Properties/Resources.resx
+++ b/Login/Properties/Resources.resx
@@ -160,6 +160,9 @@
   <data name="fotoUsuario-removebg-preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagenes\fotoUsuario-removebg-preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="premio" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagenes\premio.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="img8" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\cf241c611167e9ae25841ffcd64194ee.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -187,10 +190,13 @@
   <data name="img13" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\EbUqQGjWoAA5NeU.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="arriba-a-la-izquierda" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagenes\arriba-a-la-izquierda.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="img5" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\3e441b34d1c0661c68779e3cec30e08a.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="arriba-a-la-izquierda" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Imagenes\arriba-a-la-izquierda.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="administracion" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagenes\administracion.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
